--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
 body {
     font-family: 'Comfortaa', cursive;
+    background-image: url("../img/backgroundImage.jpg");
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {    
     .navbar-brand {
         font-size: 1em;
     }
