--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body {
     background-image: url("../img/backgroundImage.jpg");
 }
 
+.active {
+    font-weight: bold;
+}
+
 @media screen and (min-width: 320px) {    
     .navbar-brand {
         font-size: 1em;
