--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ body {
     font-weight: bold;
 }
 
+.main__texto {
+    text-shadow: 2px 3px #000000;
+}
+
 @media screen and (min-width: 320px) {    
     .navbar-brand {
         font-size: 1em;
