--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
     text-shadow: 2px 3px #000000;
 }
 
+.card img {
+    height: 300px;
+}
+
 @media screen and (min-width: 320px) {    
     .navbar-brand {
         font-size: 1em;
