--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,19 @@ body {
     height: 300px;
 }
 
-@media screen and (min-width: 320px) {    
+.card-img-top {
+    object-fit:contain;
+    padding: 20px;
+}
+
+@media screen and (max-width: 376px) {    
     .navbar-brand {
-        font-size: 1em;
+        font-size: 0.92em;
+    }
+}
+
+@media screen and (max-width: 321px) {    
+    .navbar-brand {
+        font-size: 0.82em;
     }
 }
