--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,16 @@ body {
 }
 
 .card img {
-    height: 300px;
+    height: 200px;
 }
 
 .card-img-top {
     object-fit:contain;
     padding: 20px;
+}
+
+.cards__pagina--principal {
+    padding-top: 20px;
 }
 
 @media screen and (max-width: 376px) {    
