--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,10 @@ body {
 
 .main__texto {
     text-shadow: 2px 3px #000000;
+    padding-top: 100px;
 }
+
+/*Início página main */
 
 .card {
     border: 1px solid black;
@@ -29,6 +32,12 @@ body {
     padding-top: 20px;
 }
 
+@media screen and (max-width: 500px) {    
+    .navbar-brand {
+        font-size: 1em;
+    }
+}
+
 @media screen and (max-width: 376px) {    
     .navbar-brand {
         font-size: 0.92em;
@@ -39,4 +48,20 @@ body {
     .navbar-brand {
         font-size: 0.82em;
     }
+}
+
+/* Página Main Completa */
+
+/*Início página adicionar */
+
+.form__adicionar {
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 30px;
+}
+
+.informacao__form {
+    font-size: 1.4rem;
+    font-weight: bold;
 }
