--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,25 @@ body {
     padding-top: 100px;
 }
 
+/* Footer */
+
+.footer {
+    text-align: center;
+    width: 100%;
+    height: 150px;
+    position:absolute;
+    background-image: url("../img/footerBGimage.jpg");
+}
+
+.footer__imagem {
+    width: 120px;
+    height: auto;
+}
+
+.footer__texto {
+    font-size: 1.2em;
+}
+
 /*Início página main */
 
 .card {
