--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,21 +56,9 @@ body {
     max-height: 30px;
 }
 
-@media screen and (max-width: 500px) {    
-    .navbar-brand {
-        font-size: 1em;
-    }
-}
-
-@media screen and (max-width: 376px) {    
-    .navbar-brand {
-        font-size: 0.92em;
-    }
-}
-
-@media screen and (max-width: 321px) {    
-    .navbar-brand {
-        font-size: 0.82em;
+@media screen and (max-width: 453px) {
+    .brand_desc {
+        display: none;
     }
 }
 
